fix for alignment of the stacked icon in the mobile menu for the X close button (#2)

--- a/css/asu-header-footer.css
+++ b/css/asu-header-footer.css
@@ -308,21 +308,8 @@
     outline: 0;
 }
 
-#header-main .navbar-toggler .fa-stack {
-    width: 0.875em;
-    height: 1em;
-}
-
 #header-main .navbar-toggler .fa-circle {
     color: #e8e8e8;
-    font-size: 1rem;
-    margin-left: -12px;
-    /* Magic number, align icon with hamburger */
-}
-
-#header-main .navbar-toggler .fa-times {
-    margin-left: -5px;
-    /* Magic number, same thing */
 }
 
 #header-main .navbar-toggler.collapsed .fa-stack {
